Add thesis experiment scripts and model improvements
- Added 5 new evaluation/figure generation scripts
- train.py: added --seed, --resume, num_sanity_val_steps=0, deterministic mode
- src/utils.py: DDP-safe SampleVisualizationCallback (rank-0 guard)
- Updated .gitignore to exclude large checkpoints and raw scores
- Scripts: evaluate_external_ood, evaluate_separation_ablation,
  generate_all_figures, run_ablations, run_all_experiments, run_sep_parallel

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,17 @@ outputs/
 data/
 wandb/
 .DS_Store
+
+# Large result files (checkpoints, raw scores)
+results/**/*.ckpt
+results/raw_scores/
+results/seed*/wandb/
+results/sep_loss_ablation/*/wandb/
+output_quad/
+master_log.txt
+
+# Keep figures, JSONs, latex tables (tracked)
+!results/figures/
+!results/latex_tables/
+!results/*.json
+!results/sep_loss_ablation/*.log
